tests/multiubuntu/test-cases/TC_07/TC_07_egress_toFQDNs_single_port.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-rswxpldnjobcsnv
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-2
      group: group-1
  egress:
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
    toFQDNs:
    - matchName: app.test.accuknox.com
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      - port: "9153"
        protocol: TCP
      rules:
        dns:
        - matchPattern: '*'
---
